# kompicsbenches

./: .gitignore  .travis.yml  Distributed Deployment.md  DistributedFlow.md  Implementation Issues.md  OS Specific Dependencies.md  OS_Specific_Dependencies.md  README.md  Reproduce.md  Running.md  bench.sc  benchmarks.sc  build.sc  client.sh  exp_setup.sh  index.html  install_dependencies.sh  nodes.conf  plot.sc  zip_logs_results.sh
.bsp/: sbt.json
actix/: Cargo.toml  rustfmt.toml
actix/src/: actix_system_provider.rs  benchmark_runner.rs  main.rs
actix/src/bench/: all_pairs_shortest_path.rs  chameneos.rs  fibonacci.rs  mod.rs  pingpong.rs  throughput_pingpong.rs
akka/: akkabench.sbt
akka/project/: plugins.sbt
akka/src/main/resources/: logback.xml
akka/src/test/resources/: logback-test.xml
erlang/: Makefile  Protobuf Issues.md  erlang.d  erlang.mk  erlang_benchmarks.d  relx.config  run.sh
erlang/config/: sys.config  vm.args
erlang/include/: benchmarks_pb.hrl  distributed_pb.hrl  messages_pb.hrl
erlang/src/: bench_helpers.erl  benchmark_client.erl  benchmark_master.erl  benchmark_runner.erl  benchmarks.erl  benchmarks.proto  benchmarks_pb.erl  benchmarks_server.erl  benchmarks_server_master.erl  distributed.erl  distributed.proto  distributed_benchmark.erl  distributed_native.erl  distributed_pb.erl  distributed_server.erl  duration.erl  erlang_app.erl  erlang_benchmarks.erl  erlang_sup.erl  futures.erl  gen_statem_ext.erl  lists_ext.erl  local_benchmark.erl  messages.erl  messages.proto  messages_pb.erl  messages_server.erl  socket_addr.erl  statistics.erl  test_result.erl
erlang/src/bench/: all_pairs_shortest_path_bench.erl  atomic_register_bench.erl  chameneos_bench.erl  chameneos_colour.erl  fibonacci_bench.erl  graphs.erl  net_ping_pong_bench.erl  net_throughput_ping_pong_bench.erl  ping_pong_bench.erl  sized_throughput_bench.erl  streaming_windows_bench.erl  throughput_ping_pong_bench.erl
experiments/AWS-17-October-2019/: Experiment Info.md
experiments/AWS-17-October-2019/web/: apsp.html  atomicregister.html  benchmark-suite-plotting.js  chameneos.html  fibonacci.html  index.html  netpingpong.html  nettppingpong.html  pingpong.html  standard.css  streamingwindows.html  tppingpong.html
experiments/Selene-18-October-2019/: Experiment Info.md
experiments/Selene-18-October-2019/web/: apsp.html  atomicregister.html  chameneos.html  fibonacci.html  netpingpong.html  nettppingpong.html  pingpong.html  streamingwindows.html  tppingpong.html
kompact/: Cargo.toml  build.rs  rustfmt.toml
kompact/configs/: atomic_broadcast.conf
kompact/diskstorage/: hard_state  raft_metadata
kompact/src/: atomic_bcast_client.rs  benchmark.rs  benchmark_runner.rs  kompact_system_provider.rs  lib.rs  main.rs  partitioning_actor.rs  serialiser_ids.rs
kompact/src/bench/: all_pairs_shortest_path.rs  atomic_broadcast.rs  atomicregister.rs  chameneos.rs  fibonacci.rs  messages.rs  mod.rs  net_throughput_pingpong.rs  netpingpong.rs  pingpong.rs  sized_throughput.rs  streaming_windows.rs  throughput_pingpong.rs
kompact/src/bench/atomic_broadcast/: atomic_broadcast.rs  ble.rs  client.rs  communicator.rs  exp_params.rs  messages.rs  mod.rs  parameters.rs  paxos.rs  raft.rs  storage.rs  util.rs
kompact/src/configs/: atomic_broadcast.conf
kompact/src/kompact_benchmark/: benchmarks.rs  messages.rs  mod.rs
kompics/: kompicsbench.sbt
kompics/project/: plugins.sbt
kompics_rust/: Cargo.toml  build.rs
kompics_rust/src/: benchmark_runner.rs  main.rs
kompics_rust/src/bench/: mod.rs  pingpong.rs
kompics_rust/src/kompics_benchmark/: benchmarks.rs  benchmarks_grpc.rs  messages.rs  mod.rs
kompics_scala/: kompicsbench.sbt
meta_results/new-kompact/: summary.out
meta_results/new-kompact/latency/: raw_paxos,3,1,100,off,none.data  raw_raft-batch,3,1,100,off,none.data  summary_paxos,3,1,100,off,none.out  summary_raft-batch,3,1,100,off,none.out
paxos_raft/: Cargo.toml  results.out
paxos_raft/src/: main.rs  raft_storage.rs  raft_test.rs  serialiser_ids.rs
paxos_raft/src/bench/: mod.rs  raft.rs
proto/: benchmarks.proto  distributed.proto  messages.proto
remote_logs/run-1601903392930/127.0.0.1-port-45700/: benchmarks.sc  nohup-'--name KOMPACTMIX --master 127.0.0.1#003A45679 --runid run-1601903392930 --publicif 127.0.0.1 --clientPort 45700'#000D.out
remote_logs/run-1601903392930/127.0.0.1-port-45701/: nohup-'--name KOMPACTMIX --master 127.0.0.1#003A45679 --runid run-1601903392930 --publicif 127.0.0.1 --clientPort 45701'#000D.out
remote_logs/run-1601903392930/127.0.0.1-port-45702/: nohup-'--name KOMPACTMIX --master 127.0.0.1#003A45679 --runid run-1601903392930 --publicif 127.0.0.1 --clientPort 45702'#000D.out
remote_logs/run-1601903392930/127.0.0.1-port-45703/: client.sh  nohup-'--name KOMPACTMIX --master 127.0.0.1#003A45679 --runid run-1601903392930 --publicif 127.0.0.1 --clientPort 45703'#000D.out
riker/: Cargo.toml  rustfmt.toml
riker/config/: riker.toml
riker/src/: benchmark_runner.rs  main.rs  riker_system_provider.rs
riker/src/bench/: all_pairs_shortest_path.rs  chameneos.rs  fibonacci.rs  mod.rs  pingpong.rs  throughput_pingpong.rs
runner/: .scalafmt.conf  benchrunner.sbt
runner/project/: plugins.sbt
runner/src/main/resources/: logback.xml
runner/src/test/resources/: logback-test.xml
scripts/: run-rust-tests.sh  run-scala-tests.sh  travis_install_protobuf.sh
shared_rust/: Cargo.toml  build.rs  rustfmt.toml
shared_rust/src/: benchmark.rs  benchmark_client.rs  benchmark_master.rs  benchmark_runner.rs  lib.rs
shared_rust/src/helpers/: chameneos.rs  graphs.rs  mod.rs
shared_rust/src/kompics_benchmarks/: benchmarks.rs  benchmarks_grpc.rs  distributed.rs  distributed_grpc.rs  messages.rs  mod.rs
shared_scala/: benchlibrary.sbt
shared_scala/project/: plugins.sbt
visualisation/: .scalafmt.conf  generate.sh  plot_histogram.py  plot_latency.py  visualisation.sbt
visualisation/deploy/: atomicbroadcast.html  benchmark-suite-plotting.js  index.html
visualisation/project/: plugins.sbt
(+4514 files in other folders)
