[package]
name = "paxos_raft"
version = "0.1.0"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2018"

[dependencies]
kompact 				= { git = "https://github.com/kompics/kompact"}
kompact_benchmarks      = { path = "../kompact/" }
benchmark_suite_shared 	= { path = "../shared_rust/" }
raft                    = "0.6.0-alpha"
regex                   = "1.3.4"   # TODO: remove when deleting paxos_raft example?
protobuf        		= "2"
futures         		= "0.1"
futures-cpupool 		= "0.1"
grpc 					= "0.6"
synchronoise 			= "0.4"
slog 					= {version = "2.4", features = ["max_level_debug", "release_max_level_info"]}
time 					= "0.1"
tokio-core 				= "0.1"
num_cpus 				= "1"
parse_duration 			= "2"
rand 					= {version = "0.7", features = ["small_rng"]}
chrono                  = "0.4"
uuid = { version = "0.7", features = ["v4"] }
memmap = "0.7.0"

#[dev-dependencies]
#uuid = { version = "0.7", features = ["v4"] }

[features]
travis_ci = ["slog/max_level_info", "slog/release_max_level_info"]