[package]
name = "riker_benchmarks"
version = "0.1.0"
authors = ["Lars Kroll <lkroll@kth.se>"]
edition = "2018"

[dependencies]
riker 			= "0.3"
riker-patterns 	= "0.3"
log				= "0.4"
benchmark_suite_shared = { path = "../shared_rust/" }
protobuf        = "2"
futures_preview = {version = "0.3.0-alpha.16", package="futures-preview"}
futures         = "0.1"
futures-cpupool = "0.1"
grpc 			= "0.6"
synchronoise 	= "1.0"
# slog 			= {version = "2.4", features = ["max_level_trace", "release_max_level_info"]}
time 			= "0.1"
tokio-core 		= "0.1"
num_cpus 		= "1"

[dev-dependencies]
uuid = { version = "0.7", features = ["v4"] }
